[package]
name = "waveschiesse"
version = "0.1.0"
authors = [
  "Zane Schaffer <znschaffer@gmail.com>",
  "Andre Buttersworth <copycattmusic@gmail.com>",
]
edition = "2021"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
  "assert_process_allocs",
  "standalone",
] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "1.0.0"


[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
